<resources>
    <string name="app_name">Bulkup_Today</string>
    <string name="nav_contents">Contents</string>
    <string name="nav_home">Home</string>
    <string name="nav_profile">Profile</string>

    <string name="category_title">Select\n: 당신의 던전을 선택하세요</string>

    <string name="contents_title">파티 구하기</string>

    <string name="contents_party">파티 구하기</string>
    <string name="contents_dungeon">던전 찾기</string>
    <string name="contents_quest">퀘스트 받기</string>
    <string name="contents_carry">캐리 받기</string>

    <string name="contents_party_message">파티원 모집중</string>

</resources>