<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        layout="@layout/common_actionbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="48dp"
            android:layout_height="36dp"
            android:elevation="4dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/background_contents_list">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="18dp"
                android:layout_marginHorizontal="12dp"
                android:layout_gravity="center_vertical||center_horizontal"
                android:src="@drawable/ic_list"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:elevation="4dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="24dp"
            android:layout_marginEnd="64dp"
            android:background="@drawable/background_contents_list">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginHorizontal="12dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_search"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="search"/>

        </LinearLayout>

    </LinearLayout>

   <LinearLayout
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_gravity="center_horizontal"
       android:orientation="horizontal">

     <LinearLayout
         android:id="@+id/party_layout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical">

         <TextView
             android:id="@+id/selected_partyText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="4dp"
             android:textSize="12sp"
             android:text="@string/contents_party"/>

         <TextView
             android:id="@+id/not_selected_partyText"
             android:visibility="gone"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="9dp"
             android:textColor="#c0c0c0"
             android:textSize="12sp"
             android:text="@string/contents_party"/>

         <View
             android:id="@+id/selected_party"
             android:layout_gravity="center_horizontal"
             android:layout_width="50dp"
             android:layout_height="5dp"
             android:background="@color/black"/>

     </LinearLayout>

       <LinearLayout
           android:id="@+id/dungeon_layout"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginStart="24dp"
           android:orientation="vertical">

           <TextView
               android:id="@+id/selected_dungeonText"
               android:visibility="gone"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginBottom="4dp"
               android:textSize="12sp"
               android:text="@string/contents_dungeon"/>

           <TextView
               android:id="@+id/not_selected_dungeonText"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginBottom="9dp"
               android:textColor="#c0c0c0"
               android:textSize="12sp"
               android:text="@string/contents_dungeon"/>

           <View
               android:id="@+id/selected_dungeon"
               android:visibility="gone"
               android:layout_gravity="center_horizontal"
               android:layout_width="50dp"
               android:layout_height="5dp"
               android:background="@color/black"/>

       </LinearLayout>

       <LinearLayout
           android:id="@+id/quest_layout"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginStart="24dp"
           android:orientation="vertical">

           <TextView
               android:id="@+id/selected_questText"
               android:visibility="gone"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginBottom="4dp"
               android:textSize="12sp"
               android:text="@string/contents_quest"/>

           <TextView
               android:id="@+id/not_selected_questText"

               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginBottom="9dp"
               android:textColor="#c0c0c0"
               android:textSize="12sp"
               android:text="@string/contents_quest"/>

           <View
               android:id="@+id/selected_quest"
               android:visibility="gone"
               android:layout_gravity="center_horizontal"
               android:layout_width="50dp"
               android:layout_height="5dp"
               android:background="@color/black"/>

       </LinearLayout>

       <LinearLayout
           android:id="@+id/carry_layout"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginStart="24dp"
           android:orientation="vertical">

           <TextView
               android:id="@+id/selected_carryText"
               android:visibility="gone"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginBottom="4dp"
               android:textSize="12sp"
               android:text="@string/contents_carry"/>

           <TextView
               android:id="@+id/not_selected_carryText"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginBottom="9dp"
               android:textColor="#c0c0c0"
               android:textSize="12sp"
               android:text="@string/contents_carry"/>

           <View
               android:id="@+id/selected_carry"
               android:visibility="gone"
               android:layout_gravity="center_horizontal"
               android:layout_width="50dp"
               android:layout_height="5dp"
               android:background="@color/black"/>

       </LinearLayout>

   </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#C0C0C0"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginStart="16dp"
        android:text="@string/contents_party_message"
        android:layout_marginTop="16dp"
        android:drawablePadding="4dp"
        android:drawableEnd="@drawable/ic_sword"/>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"/>

</LinearLayout>